src/objects/phones__x.object
<CustomObject>
    <fields>
        <fullName>Brand__c</fullName>
        <description>Brand</description>
        <externalDeveloperName>Brand</externalDeveloperName>
        <label>Brand</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <description>ID</description>
        <externalDeveloperName>ID</externalDeveloperName>
        <label>ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhoneNumber__c</fullName>
        <description>PhoneNumber</description>
        <externalDeveloperName>PhoneNumber</externalDeveloperName>
        <label>PhoneNumber</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UUID__c</fullName>
        <description>UUID</description>
        <externalDeveloperName>UUID</externalDeveloperName>
        <label>UUID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
</CustomObject>